--- a/fcc/js/fccJsWorkShop/pre-order.html
+++ b/fcc/js/fccJsWorkShop/pre-order.html
@@ -1,8 +1,6 @@
 <h3 style="text-align: center;"><img width="500px" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/PRE_ORDER_00000_00.webp?v=1753670836" alt=""></h3>
 <div class="pre-order-grid">
 
-
-
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
 <!--"Wandering Sword"-->
@@ -67,8 +65,8 @@
 <div><a href="/collections/007-first-light"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_ebf1b4dd-a347-4a6c-a1cb-8edfde281d65.webp?v=1769578621" class="custom-promo-banner"></a></div>
 <!--"Beyblade X"-->
 <div><a href="/products/nintendo-switch-beyblade-x-xone-complete-edition-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_55be15dc-8370-435d-a532-a9784458af75.webp?v=1769578387" class="custom-promo-banner"></a></div>
-<!--"Code Vein 2"-->
-<div><a href="/collections/code-vein-ii"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_b2debf8c-1685-4689-8ad3-caf69738eb82.webp?v=1769578272" class="custom-promo-banner"></a></div>
+<!-- "Code Vein 2"
+<div><a href="/collections/code-vein-ii"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_b2debf8c-1685-4689-8ad3-caf69738eb82.webp?v=1769578272" class="custom-promo-banner"></a></div> -->
 <!--"Crimson Desert"-->
 <div><a href="/products/pre-order-playstation-5-crimson-desert-standard-edition-r3"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_80dcf0c4-8894-45ec-8f1f-5c425b48914f.webp?v=1769576808" class="custom-promo-banner"></a></div>
 <!--"YS Memoire"-->
