WorkShop String Transformer

--- a/fcc/pre-order.html
+++ b/fcc/pre-order.html
@@ -1,3 +1,5 @@
+<!-- not really ffc -->
+
 <h3 style="text-align: center;"><img width="500px" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/PRE_ORDER_00000_00.webp?v=1753670836" alt=""></h3>
 <div class="pre-order-grid">
 
