--- a/fcc/back-up-pre-order.html
+++ b/fcc/back-up-pre-order.html
@@ -39,14 +39,20 @@
 <div><a href="/products/pre-order-playstation-5-styx-blades-of-greed-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Styx.webp?v=1769588931" class="custom-promo-banner"></a></div>
 <!--"Cthulhu"-->
 <div><a href="/products/pre-order-playstation-5-cthulhu-the-cosmic-abyss-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Cthulu.webp?v=1769588924" class="custom-promo-banner"></a></div>
+<!--"Entropy"-->
+<div><a href="/collections/blazblue-entropy"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Entropy.webp?v=1769584801" class="custom-promo-banner"></a></div>
 <!--"Etrange Overlord"-->
 <div><a href="/products/pre-order-playstation-5-etrange-overlord-deluxe-edition-us"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Etrange_Overlord.webp?v=1769584796" class="custom-promo-banner"></a></div>
 <!--"Fatal Frame"-->
 <div><a href="/collections/fatal-frame-2-crimson-butterfly"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Fatal_frame.webp?v=1769584794" class="custom-promo-banner"></a></div>
 <!--"Gear Club"-->
 <div><a href="/collections/gear-club"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Gear_club.webp?v=1769584791" class="custom-promo-banner"></a></div>
+<!--"Greedfall"-->
+<div><a href="/products/pre-order-playstation-5-greedfall-2-the-dying-world-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Greedfall.webp?v=1769584761" class="custom-promo-banner"></a></div>
 <!--"Homicipher"-->
 <div><a href="/products/pre-order-nintendo-switch-homicipher-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Homicipher.webp?v=1769582172" class="custom-promo-banner"></a></div>
+<!--"Mario Tennis Fever"-->
+<div><a href="/products/pre-order-nintendo-switch-2-mario-tennis-fever-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_mario_tennis.webp?v=1769581898" class="custom-promo-banner"></a></div>
 <!--"Nine Sols"-->
 <div><a href="/collections/nine-sols"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_nine_sols.webp?v=1769581514" class="custom-promo-banner"></a></div>
 <!--"No Sleep"-->
@@ -63,6 +69,8 @@
 <div><a href="/products/pre-order-playstation-5-crimson-desert-standard-edition-r3"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_80dcf0c4-8894-45ec-8f1f-5c425b48914f.webp?v=1769576808" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
 <!--"YS Memoire"-->
 <div><a href="/products/pre-order-ys-memoire-revelations-in-celceta-day-1-edition-nintendo-switch-us"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_f53296fc-d49f-421c-86ae-9bad05dc25a6.webp?v=1769575950" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
+<!--"Yakuza Kiwami 3 & Dark Ties"-->
+<div><a href="/collections/yakuza-kiwami-3-dark-ties"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner-Yakuza-Kiwami.webp?v=1764222299" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
 </div>
 <style>
   .pre-order-grid {
