--- a/fcc/gx/pre-order.html
+++ b/fcc/gx/pre-order.html
@@ -2,7 +2,11 @@
 <div class="pre-order-grid">
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
-  
+
+<!--"The Disney Afternoon Collection"-->
+<div><a href="/collections/the-disney-afternoon-collection"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DISNEY.png?v=1771380596" class="custom-promo-banner"></a></div>
+<!--"WWE 2k26"-->
+<div><a href="/products/pre-order-playstation-5-wwe-2k26-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DESKTOP_05e02817-2254-4579-b8e5-24a1772feddc.webp?v=1770960572" class="custom-promo-banner"></a></div>
 <!--"Blue Prince"-->
 <div><a href="/products/pre-order-playstation-5-blue-prince-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/blue_prince_-_pre_order_banner.webp?v=1770189529" class="custom-promo-banner"></a></div>
 <!--"House of the Dead 2"-->
@@ -15,8 +19,6 @@
 <div><a href="/collections/sword-of-the-necromancer"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Sword_of_the_Necromancer.webp?v=1769590396" class="custom-promo-banner"></a></div>
 <!--"Tales of Berseria"-->
 <div><a href="/collections/tales-of-berseria"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Tales_of_Berseria.webp?v=1769590399" class="custom-promo-banner"></a></div>
-<!--"Rune Factory Guardians of Azuma"-->
-<div><a href="/collections/rune-factory-guardians-of-azuma"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_The_Guardian.webp?v=1769590402" class="custom-promo-banner"></a></div>
 <!--"Until Then"-->
 <div><a href="/collections/until-then"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Until_Then.webp?v=1769590386" class="custom-promo-banner"></a></div>
 <!--"The Relic"-->
@@ -53,8 +55,6 @@
 <div><a href="/products/pre-order-playstation-5-no-sleep-for-kaname-date-from-ai-the-somnium-files-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_no_sleep.webp?v=1769580054" class="custom-promo-banner"></a></div>
 <!--"Pokemon Pokopia"-->
 <div><a href="/products/pre-order-nintendo-switch-2-pokemon%E2%84%A2-pokopia-game-key-card-asi"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_e073ea96-dc06-43f9-bc4b-603a919ced23.webp?v=1769579070" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
-<!--"Reanimal"-->
-<div><a href="/collections/reanimal"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_7e1fe98e-33d3-4e68-91c6-1c64bae45274.webp?v=1769578835" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
 <!--"007 First Light"-->
 <div><a href="/collections/007-first-light"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_ebf1b4dd-a347-4a6c-a1cb-8edfde281d65.webp?v=1769578621" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
 <!--"Code Vein 2"--> <!--"Crimson Desert"-->
