--- a/fcc/gx/promo.html
+++ b/fcc/gx/promo.html
@@ -1,15 +1,15 @@
 <h3 style="text-align: center;">Promos and Bundles</h3>
 <div class="promo-div">
-  <!--"Festive"-->
-<div><a href="/collections/playstation-festive-new-year-sale"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEB_2.webp?v=1770197500" class="custom-promo-banner"></a></div>
-  <!--"CNY Mega Savings"-->
-<div><a href="/collections/year-of-the-horse-mega-savings-laptops"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/CNY_desktop.webp?v=1770256956" class="custom-promo-banner"></a></div>
-  <!--"Triple Win Laptop Deals"-->
-<div><a href="/collections/triple-win-laptop-deals"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEBSITE_LAPTOP.webp?v=1770881429" class="custom-promo-banner"></a></div>
-</div>
+<!--"CNY Mega Savings"-->
+<div><a href="/collections/year-of-the-horse-mega-savings-laptops"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/CNY_desktop.webp?v=1770256956" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
+<!--"Triple Win Laptop Deals"-->
+<!-- <div><a href="/collections/triple-win-laptop-deals"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEBSITE_LAPTOP.webp?v=1770881429" style="display: block; margin-left: auto; margin-right: auto;"></a></div> -->
+
+  <!--"Take2"-->
+  <div><a href="/collections/take2-lunar-new-year-sale"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEBSITE_LUNAR.webp?v=1771203020" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
   <!--"hyperpop"-->
-<div><a href="/collections/playstation-hyperpop-collection"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEB_1.webp?v=1768527869" class="custom-promo-banner"></a></div>
-</div>
+  <div><a href="/collections/playstation-hyperpop-collection"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEB_1.webp?v=1768527869" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
+  </div>
 <style>
     .promo-div div{
         margin-bottom: 10px;
