--- a/fcc/gx/pre-order.html
+++ b/fcc/gx/pre-order.html
@@ -3,6 +3,12 @@
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
   
+<!--"Tales of Arise"-->
+<div><a href="/products/pre-order-nintendo-switch-2-tales-of-arise-beyond-the-dawn-edition-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Tales_of_AriseWEB.png?v=1771567528" class="custom-promo-banner"></a></div>
+  
+<!--"Rayman"-->
+<div><a href="/products/pre-order-playstation-5-rayman-30th-anniversary-edition-eu"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Rayman_WEB.png?v=1771567529" class="custom-promo-banner"></a></div>
+  
 <!--"The Disney Afternoon Collection"-->
 <div><a href="/collections/the-disney-afternoon-collection"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DISNEY.png?v=1771380596" class="custom-promo-banner"></a></div>
 <!--"WWE 2k26"-->
