--- a/fcc/gx/promo.html
+++ b/fcc/gx/promo.html
@@ -1,9 +1,9 @@
 <h3 style="text-align: center;">Promos and Bundles</h3>
 <div class="promo-div">
 <!--"Festive"-->
-<div><a href="/collections/playstation-festive-new-year-sale"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEB_2.webp?v=1770197500" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
+<!-- <div><a href="/collections/playstation-festive-new-year-sale"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEB_2.webp?v=1770197500" style="display: block; margin-left: auto; margin-right: auto;"></a></div> -->
 <!--"CNY Mega Savings"-->
-<div><a href="/collections/year-of-the-horse-mega-savings-laptops"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/CNY_desktop.webp?v=1770256956" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
+<!-- <div><a href="/collections/year-of-the-horse-mega-savings-laptops"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/CNY_desktop.webp?v=1770256956" style="display: block; margin-left: auto; margin-right: auto;"></a></div> -->
 <!--"Triple Win Laptop Deals"-->
 <!-- <div><a href="/collections/triple-win-laptop-deals"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/WEBSITE_LAPTOP.webp?v=1770881429" style="display: block; margin-left: auto; margin-right: auto;"></a></div> -->
 
