--- a/fcc/gx/pre-order.html
+++ b/fcc/gx/pre-order.html
@@ -2,13 +2,10 @@
 <div class="pre-order-grid">
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
-  
 <!--"Tales of Arise"-->
 <div><a href="/products/pre-order-nintendo-switch-2-tales-of-arise-beyond-the-dawn-edition-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Tales_of_AriseWEB.png?v=1771567528" class="custom-promo-banner"></a></div>
-  
 <!--"Rayman"-->
-<div><a href="/products/pre-order-playstation-5-rayman-30th-anniversary-edition-eu"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Rayman_WEB.png?v=1771567529" class="custom-promo-banner"></a></div>
-  
+<div><a href="/collections/rayman"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Rayman_WEB.png?v=1771567529" class="custom-promo-banner"></a></div>
 <!--"The Disney Afternoon Collection"-->
 <div><a href="/collections/the-disney-afternoon-collection"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DISNEY.png?v=1771380596" class="custom-promo-banner"></a></div>
 <!--"WWE 2k26"-->
@@ -19,10 +16,6 @@
 <div><a href="/collections/monster-hunter"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/monster_hunter_-_pre_order_banner.webp?v=1770189530" class="custom-promo-banner"></a></div>
 <!--"Wandering Sword"-->
 <div><a href="/products/pre-order-playstation-5-wandering-sword-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Wandering_Sword.webp?v=1769590390" class="custom-promo-banner"></a></div>
-<!--"Sword of the Necromancer"-->
-<div><a href="/collections/sword-of-the-necromancer"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Sword_of_the_Necromancer.webp?v=1769590396" class="custom-promo-banner"></a></div>
-<!--"Tales of Berseria"-->
-<div><a href="/collections/tales-of-berseria"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Tales_of_Berseria.webp?v=1769590399" class="custom-promo-banner"></a></div>
 <!--"Until Then"-->
 <div><a href="/collections/until-then"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Until_Then.webp?v=1769590386" class="custom-promo-banner"></a></div>
 <!--"The Relic"-->
@@ -31,8 +24,6 @@
 <div><a href="/collections/this-is-fine"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_This_is_fine.webp?v=1769589541" class="custom-promo-banner"></a></div>
 <!--"Total Chaos"-->
 <div><a href="/products/pre-order-playstation-5-total-chaos-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Total_Chaos.webp?v=1769589764" class="custom-promo-banner"></a></div>
-<!--"Resident Evil Requiem"-->
-<div><a href="/collections/resident-evil-requiem"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Resident_Evil_Requiem.webp?v=1769589639" class="custom-promo-banner"></a></div>
 <!--"Rogue Prince"-->
 <div><a href="/collections/rogue-prince"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Rogue_Prince.webp?v=1769588833" class="custom-promo-banner"></a></div>
 <!--"Saros"-->
@@ -53,8 +44,6 @@
 <div><a href="/products/pre-order-nintendo-switch-homicipher-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Homicipher.webp?v=1769582172" class="custom-promo-banner"></a></div>
 <!--"Nine Sols"-->
 <div><a href="/collections/nine-sols"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_nine_sols.webp?v=1769581514" class="custom-promo-banner"></a></div>
-<!--"No Sleep"-->
-<div><a href="/products/pre-order-playstation-5-no-sleep-for-kaname-date-from-ai-the-somnium-files-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_no_sleep.webp?v=1769580054" class="custom-promo-banner"></a></div>
 <!--"Pokemon Pokopia"-->
 <div><a href="/products/pre-order-nintendo-switch-2-pokemon%E2%84%A2-pokopia-game-key-card-asi"><img class="custom-promo-banner" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_e073ea96-dc06-43f9-bc4b-603a919ced23.webp?v=1769579070" style="display: block; margin-left: auto; margin-right: auto;"></a></div>
 <!--"007 First Light"-->
