--- a/fcc/gx/back-up-pre-order.html
+++ b/fcc/gx/back-up-pre-order.html
@@ -2,15 +2,19 @@
 <div class="pre-order-grid">
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
-
+  
+<!--"Tales of Arise"-->
+<div><a href="/products/pre-order-nintendo-switch-2-tales-of-arise-beyond-the-dawn-edition-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Tales_of_AriseWEB.png?v=1771567528" class="custom-promo-banner"></a></div>
+  
+<!--"Rayman"-->
+<div><a href="/products/pre-order-playstation-5-rayman-30th-anniversary-edition-eu"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Rayman_WEB.png?v=1771567529" class="custom-promo-banner"></a></div>
+  
 <!--"The Disney Afternoon Collection"-->
 <div><a href="/collections/the-disney-afternoon-collection"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DISNEY.png?v=1771380596" class="custom-promo-banner"></a></div>
 <!--"WWE 2k26"-->
 <div><a href="/products/pre-order-playstation-5-wwe-2k26-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DESKTOP_05e02817-2254-4579-b8e5-24a1772feddc.webp?v=1770960572" class="custom-promo-banner"></a></div>
 <!--"Blue Prince"-->
 <div><a href="/products/pre-order-playstation-5-blue-prince-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/blue_prince_-_pre_order_banner.webp?v=1770189529" class="custom-promo-banner"></a></div>
-<!--"House of the Dead 2"-->
-<div><a href="/products/pre-order-playstation-5-the-house-of-the-dead-2-remake-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/house_of_the_dead_-_pre_order_banner.webp?v=1770189529" class="custom-promo-banner"></a></div>
 <!--"Monster Hunter"-->
 <div><a href="/collections/monster-hunter"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/monster_hunter_-_pre_order_banner.webp?v=1770189530" class="custom-promo-banner"></a></div>
 <!--"Wandering Sword"-->
@@ -37,8 +41,6 @@
 <div><a href="/collections/shuten-order"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Shuten_Order.webp?v=1769588700" class="custom-promo-banner"></a></div>
 <!--"Sonic Racing"-->
 <div><a href="/products/pre-order-nintendo-switch-2-sonic-racing-cross-worlds-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Sonic_Racing.webp?v=1769588982" class="custom-promo-banner"></a></div>
-<!--"Styx"-->
-<div><a href="/products/pre-order-playstation-5-styx-blades-of-greed-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Styx.webp?v=1769588931" class="custom-promo-banner"></a></div>
 <!--"Cthulhu"-->
 <div><a href="/products/pre-order-playstation-5-cthulhu-the-cosmic-abyss-eur"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_Cthulu.webp?v=1769588924" class="custom-promo-banner"></a></div>
 <!--"Etrange Overlord"-->
