--- a/fcc/gx/pre-order.html
+++ b/fcc/gx/pre-order.html
@@ -2,6 +2,8 @@
 <div class="pre-order-grid">
 <!--"Batman Lego"-->
 <div><a href="/collections/lego-batman-legacy-of-the-dark-knight"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Banner_pre_order_Batman.webp?v=1769650463" class="custom-promo-banner"></a></div>
+<!--"DragonKin"-->
+<div><a href="/products/pre-order-playstation-5-dragonkin-the-banished-eu"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/DragonKin_DESKTOP.webp?v=1772241101" class="custom-promo-banner"></a></div>
 <!--"Tales of Arise"-->
 <div><a href="/products/pre-order-nintendo-switch-2-tales-of-arise-beyond-the-dawn-edition-asi"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.shopify.com/s/files/1/0442/2749/4055/files/Tales_of_AriseWEB.png?v=1771567528" class="custom-promo-banner"></a></div>
 <!--"Rayman"-->
